noinst_LTLIBRARIES = libtable.la

libtable_la_SOURCES = block.h \
		      block_builder.h \
		      filter_block.h \
		      format.h \
		      iterator_wrapper.h \
		      merger.h \
		      two_level_iterator.h \
		      block.cc \
		      block_builder.cc \
		      filter_block.cc \
		      format.cc \
		      iterator.cc \
		      merger.cc \
		      table.cc \
		      table_builder.cc \
		      two_level_iterator.cc

libtable_la_CXXFLAGS = $(AM_CXXFLAGS) -I$(top_srcdir) -I$(top_srcdir)/include
